--- a/wizard/Dockerfile
+++ b/wizard/Dockerfile
@@ -10,6 +10,7 @@ RUN --mount=type=cache,target=/root/.cache/pdm \
     pdm install --no-self
 
 COPY wizard.py .
+COPY parsers/ parsers/
 
 EXPOSE 8000/TCP
 CMD ["pdm", "run", "./wizard.py"]
