Make dbmate wait for Postgres

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,2 +1,5 @@
 FROM ghcr.io/amacneil/dbmate as dbmate
-COPY ./ db/
+COPY migrations/ db/migrations/
+COPY entrypoint.sh .
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["dbmate", "--no-dump-schema", "up"]
