--- a/wizard/pyproject.toml
+++ b/wizard/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "requests>=2.28.1",
     "openpyxl>=3.1.2",
     "orjson>=3.9.9",
+    "jinja2>=3.1.3",
 ]
 requires-python = ">=3.8"
 license = {text = "GPLv3"}
