--- a/wizard/pyproject.toml
+++ b/wizard/pyproject.toml
@@ -11,10 +11,17 @@ dependencies = [
     "openpyxl>=3.1.2",
     "orjson>=3.9.9",
     "jinja2>=3.1.3",
+    "gpxpy>=1.6.2",
+    "pyarrow>=14.0.2",
+    "pandas>=2.0.3",
 ]
 requires-python = ">=3.8"
 license = {text = "GPLv3"}
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.4",
+]
 [build-system]
 requires = ["pdm-pep517>=1.0.0"]
 build-backend = "pdm.pep517.api"
