--- a/wizard/pyproject.toml
+++ b/wizard/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "gpxpy>=1.6.2",
     "pyarrow>=14.0.2",
     "pandas>=2.0.3",
+    "chardet>=5.2.0",
 ]
 requires-python = ">=3.8"
 license = {text = "GPLv3"}
