always dump schema

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -2,4 +2,4 @@ FROM ghcr.io/amacneil/dbmate as dbmate
 COPY migrations/ db/migrations/
 COPY entrypoint.sh .
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["dbmate", "--no-dump-schema", "up"]
+CMD ["dbmate", "up"]
