--- a/wizard/pyproject.toml
+++ b/wizard/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pandas>=2.0.3",
     "chardet>=5.2.0",
     "sentry-sdk>=1.40.5",
+    "procrastinate",
 ]
 requires-python = ">=3.8"
 license = {text = "GPLv3"}
