--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,6 +29,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Log in to the Container registry
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
