--- a/wizard/pyproject.toml
+++ b/wizard/pyproject.toml
@@ -13,12 +13,12 @@ dependencies = [
     "jinja2>=3.1.3",
     "gpxpy>=1.6.2",
     "pyarrow>=14.0.2",
-    "pandas>=2.0.3",
+    "pandas>=2.3.3",
     "chardet>=5.2.0",
     "sentry-sdk>=1.40.5",
     "procrastinate",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 license = {text = "GPLv3"}
 
 [project.optional-dependencies]
@@ -34,6 +34,9 @@ build-backend = "pdm.pep517.api"
 # https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
 profile = "black"
 
+
 [tool.ruff]
 fix = true
+
+[tool.ruff.lint]
 ignore = ["E501"]
