chg: replace pdm and procrastinate

--- a/wizard/Dockerfile
+++ b/wizard/Dockerfile
@@ -1,18 +1,16 @@
-FROM python:3.11
-
-RUN --mount=type=cache,target=/root/.cache/pdm \
-    python3 -m pip install pdm
+FROM python:3.12-trixie
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 WORKDIR /app
-COPY pyproject.toml pdm.lock .
+COPY pyproject.toml uv.lock .
 
-RUN --mount=type=cache,target=/root/.cache/pdm \
-    pdm install --no-self
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --frozen
 
-COPY wizard.py parser.py tasks.py entrypoint.sh .
+COPY wizard.py parser.py tasks.py logger.py entrypoint.sh .
 COPY parsers/ parsers/
 COPY templates/ templates/
 
 EXPOSE 8000/TCP
 ENTRYPOINT [ "./entrypoint.sh" ]
-CMD ["pdm", "run", "./wizard.py"]
+CMD ["uv", "run", "./wizard.py"]
