--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   postgres:
     image: postgis/postgis:16-3.4
@@ -23,7 +22,6 @@ services:
       PGRST_JWT_SECRET: ${JWT_SECRET}
       PGRST_DB_ANON_ROLE: web_anon
   wizard:
-    image: seapop_wizard
     build:
       context: wizard
     environment:
@@ -40,8 +38,9 @@ services:
       - ./wizard/parsers:/app/parsers
       - ./test_data:/test_data
   queue:
-    image: seapop_wizard
-    command: pdm run procrastinate --app=tasks.app worker
+    build:
+      context: wizard
+    command: uv run tasks.py
     environment:
       POSTGREST_URL: http://postgrest:3000
       POSTGREST_TOKEN: ${WRITER_TOKEN}
