--- a/wizard/pyproject.toml
+++ b/wizard/pyproject.toml
@@ -16,27 +16,25 @@ dependencies = [
     "pandas>=2.3.3",
     "chardet>=5.2.0",
     "sentry-sdk>=1.40.5",
-    "procrastinate",
+    "typer>=0.21.1",
+    "schedule>=1.2.2",
+    "structlog>=25.5.0",
 ]
 requires-python = ">=3.11"
 license = {text = "GPLv3"}
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
-    "pytest>=7.4.4",
+  "pytest"
 ]
-[build-system]
-requires = ["pdm-pep517>=1.0.0"]
-build-backend = "pdm.pep517.api"
-
-[tool]
-[tool.isort]
-# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
-profile = "black"
-
 
 [tool.ruff]
 fix = true
 
 [tool.ruff.lint]
-ignore = ["E501"]
+ignore = ["COM812", "E501"]
+select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "DEBUG"
