--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,6 +22,9 @@ jobs:
             image: ghcr.io/ninanor/seabird-wizard
           - context: nginx
             image: ghcr.io/ninanor/seabird-nginx
+          - context: admin
+            image: ghcr.io/ninanor/seabird-admin
+            target: prod
     permissions:
       contents: read
       packages: write
@@ -52,3 +55,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          target: ${{ matrix.target }}
