--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,17 @@ services:
     environment:
       PGWEB_DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@postgres:5432/postgres?sslmode=disable
       WAIT_FOR: postgres:5432
+  admin:
+    build:
+      context: admin
+      target: dev
+    volumes:
+      - ./admin/src:/app/src
+      - ./admin/public:/app/public
+      - ./admin/index.html:/app/index.html
+      - ./admin/vite.config.ts:/app/vite.config.ts
+      - ./admin/tsconfig.json:/app/tsconfig.json
+      - ./admin/tsconfig.app.json:/app/tsconfig.app.json
   nginx:
     build: nginx
     ports:
@@ -63,3 +74,4 @@ services:
       - ./data:/data/
 volumes:
   pgdata:
+
