--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -51,4 +51,13 @@ server {
         set $upstream http://pgweb:8081;
         proxy_pass $upstream/$1$is_args$args;
     }
+
+    location /admin/ {
+        set $upstream http://admin:5173;
+        proxy_pass $upstream;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+    }
 }
