--- a/admin/package.json
+++ b/admin/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^7.3.8",
     "@raphiniert/ra-data-postgrest": "^2.5.1",
+    "jose": "^6.1.3",
     "react": "^19.2.0",
     "react-admin": "^5.14.1",
     "react-dom": "^19.2.0"
