chg: move parser to separate repo, ruff code style

--- a/wizard/Dockerfile
+++ b/wizard/Dockerfile
@@ -7,8 +7,7 @@ COPY pyproject.toml uv.lock .
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --frozen
 
-COPY wizard.py parser.py tasks.py logger.py entrypoint.sh .
-COPY parsers/ parsers/
+COPY wizard.py tasks.py logger.py entrypoint.sh .
 COPY templates/ templates/
 
 EXPOSE 8000/TCP
