--- a/wizard/pyproject.toml
+++ b/wizard/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
     "schedule>=1.2.2",
     "structlog>=25.5.0",
     "gps-logger-parser",
+    "fsspec>=2026.2.0",
+    "s3fs>=2026.2.0",
+    "universal-pathlib>=0.3.9",
+    "django-environ>=0.12.1",
 ]
 requires-python = ">=3.11"
 license = {text = "GPLv3"}
@@ -42,3 +46,10 @@ log_cli_level = "DEBUG"
 
 [tool.uv.sources]
 gps-logger-parser = { git = "https://github.com/NINAnor/gps-logger-parser" }
+
+[build-system]
+build-backend = "hatchling.build"
+requires = ["hatchling"]
+
+[tool.hatch.metadata]
+allow-direct-references = true
