--- a/wizard/Dockerfile
+++ b/wizard/Dockerfile
@@ -5,11 +5,16 @@ WORKDIR /app
 COPY pyproject.toml uv.lock .
 
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen
+    uv sync --frozen --no-install-project
 
 COPY src entrypoint.sh .
-COPY templates/ templates/
+
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --frozen
+
+ENV AWS_REQUEST_CHECKSUM_CALCULATION=WHEN_REQUIRED
+ENV AWS_RESPONSE_CHECKSUM_VALIDATION=WHEN_REQUIRED
 
 EXPOSE 8000/TCP
 ENTRYPOINT [ "./entrypoint.sh" ]
-CMD ["uv", "run", "seapop-wizard"]
+CMD ["uv", "run", "wizard"]
